kustomizeResource/overlays/development/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: auto-agent-ui-service-internal
spec:
  selector:
    name: dev-auto-agent-ui
