kustomizeResource/overlays/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auto-agent-ui-service
spec:
  selector:
    name: dev-auto-agent-ui
